# logos-webview-app

./: .gitignore  CMakeLists.txt  README.md  flake.nix  metadata.json
nix/: default.nix  lib.nix
src/: WebView.qml  WebViewAppBackend.cpp  WebViewAppBackend.h  WebViewAppComponent.cpp  WebViewAppComponent.h  WebViewAppWidget.cpp  WebViewAppWidget.h  local.html  webview_app.rep  webview_app_interface.h  webview_app_plugin.cpp  webview_app_plugin.h  webview_resources.qrc
src/js/: logos-script.js
src/qml/: Resources.js  WebView.qml
